--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marvel</title>
+    <link rel="stylesheet" href="css/style.min.css">
+</head>
+<body>
+    <div id="root" class="app">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+        <!-- <main>
+            <div class="app__banner">
+                <img src="img/Avengers.png" alt="Avengers">
+                <div class="app__banner-text">
+                    New comics every week!<br>
+                    Stay tuned!
+                </div>
+                <img src="img/Avengers_logo.png" alt="Avengers logo">
+            </div>
+            <div class="comics__list">
+                <ul class="comics__grid">
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/UW.png" alt="ultimate war" class="comics__item-img">
+                            <div class="comics__item-name">ULTIMATE X-MEN VOL. 5: ULTIMATE WAR TPB</div>
+                            <div class="comics__item-price">9.99$</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/x-men.png" alt="x-men" class="comics__item-img">
+                            <div class="comics__item-name">X-Men: Days of Future Past</div>
+                            <div class="comics__item-price">NOT AVAILABLE</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/UW.png" alt="ultimate war" class="comics__item-img">
+                            <div class="comics__item-name">ULTIMATE X-MEN VOL. 5: ULTIMATE WAR TPB</div>
+                            <div class="comics__item-price">9.99$</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/x-men.png" alt="x-men" class="comics__item-img">
+                            <div class="comics__item-name">X-Men: Days of Future Past</div>
+                            <div class="comics__item-price">NOT AVAILABLE</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/UW.png" alt="ultimate war" class="comics__item-img">
+                            <div class="comics__item-name">ULTIMATE X-MEN VOL. 5: ULTIMATE WAR TPB</div>
+                            <div class="comics__item-price">9.99$</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/x-men.png" alt="x-men" class="comics__item-img">
+                            <div class="comics__item-name">X-Men: Days of Future Past</div>
+                            <div class="comics__item-price">NOT AVAILABLE</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/UW.png" alt="ultimate war" class="comics__item-img">
+                            <div class="comics__item-name">ULTIMATE X-MEN VOL. 5: ULTIMATE WAR TPB</div>
+                            <div class="comics__item-price">9.99$</div>
+                        </a>
+                    </li>
+                    <li class="comics__item">
+                        <a href="#">
+                            <img src="img/x-men.png" alt="x-men" class="comics__item-img">
+                            <div class="comics__item-name">X-Men: Days of Future Past</div>
+                            <div class="comics__item-price">NOT AVAILABLE</div>
+                        </a>
+                    </li>
+                </ul>
+                <button class="button button__main button__long">
+                    <div class="inner">load more</div>
+                </button>
+            </div>
+        </main> -->
+        <!-- <main>
+            <div class="app__banner">
+                <img src="img/Avengers.png" alt="Avengers">
+                <div class="app__banner-text">
+                    New comics every week!<br>
+                    Stay tuned!
+                </div>
+                <img src="img/Avengers_logo.png" alt="Avengers logo">
+            </div>
+            <div class="single-comic">
+                <img src="img/x-men.png" alt="x-men" class="single-comic__img">
+                <div class="single-comic__info">
+                    <h2 class="single-comic__name">X-Men: Days of Future Past</h2>
+                    <p class="single-comic__descr">Re-live the legendary first journey into the dystopian future of 2013 - where Sentinels stalk the Earth, and the X-Men are humanity's only hope...until they die! Also featuring the first appearance of Alpha Flight, the return of the Wendigo, the history of the X-Men from Cyclops himself...and a demon for Christmas!?</p>
+                    <p class="single-comic__descr">144 pages</p>
+                    <p class="single-comic__descr">Language: en-us</p>
+                    <div class="single-comic__price">9.99$</div>
+                </div>
+                <a href="#" class="single-comic__back">Back to all</a>
+            </div>
+        </main> -->
+    </div>
+</body>
 </html>
